# HammingBruteForce

./: CMakeLists.txt  README.md
example/: main.cpp
src/: AlignedAllocator.h  HamingBruteForce.cpp  HamingBruteForce.h  HamingBruteForce.m4  HammingBruteForce.cpp  HammingBruteForce.h  MathKernels.h  MathKernels.ispc  MathKernels.m4  Types.h  create_synthethic_data.h  create_synthethic_data.m4
